# python-basic-2023

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: django-homework_09-test.yml  django.yml  homework_09.yml  pylint.yml  pylint_homework_10.yml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  README.md  items_views.py  main.py  pyproject.toml  view.py
homework_03/users/: crud.py  schemas.py  views.py
homework_04/: README.md  __init__.py  config.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py  orm_1_create_table.py  postgres.env  pyproject.toml  querirs.sql  user.py
homework_04/models/: __init__.py  base.py  config.py  mixins.py  post.py  user.py
homework_05/: app.py  main.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  Dockerfile-local  app.env  app.py  docker-compose.yaml  pyproject.toml
homework_06/docs/: README.md
homework_06/flask-on-docker/: .env.dev  .env.prod  README-02.md  docker-compose.prod.yml  docker-compose.yml
homework_06/flask-on-docker/services/nginx/: nginx.conf
homework_06/flask-on-docker/services/web/: .flaskenv  Dockerfile  Dockerfile.prod  manage.py  requirements.txt
homework_06/flask-on-docker/services/web/project/: __init__.py
homework_06/flask-on-docker/services/web/project/static/: hello.txt
homework_06/migrations/versions/: 2230ba041690_create_products_table.py
homework_06/nginx/: Dockerfile  nginx.conf
homework_06/templates/: about.html  base.html  index.html
homework_06/templates/products/: add.html  confirm-delete.html  details.html  list.html
homework_06/views/: products.py
homework_07/: pyproject.toml
homework_07/docs/: link.md
homework_07/ms_sql_server/: Dockerfile  setup.sql
homework_07/nomad/catalog/: models.py  views.py
homework_07/nomad/emaillist/: admin.py  apps.py  models.py  urls.py  views.py
homework_07/nomad/emaillist/migrations/: 0001_initial.py  0004_alter_manager_birthday.py
homework_07/nomad/emaillist/static/css/: styles.css
homework_07/nomad/emaillist/templates/: base_generic.html
homework_07/nomad/emaillist/templates/emaillist/: manager_detail.html
homework_07/nomad/nomad/: settings.py  urls.py  wsgi.py
homework_07/sql/: Start scripts 20231008.sql
homework_08/docs/: Logo generator.pptx  istructions4docker.md
homework_08/ms_sql_server/: ReadME.md  setup.sql
homework_08/nomad/: manage.py
homework_08/nomad/catalog/: admin.py  urls.py
homework_08/nomad/emaillist/: models.py  urls.py
homework_08/nomad/nomad/: settings.py
homework_08/nomad/templates/: base_site.html
homework_08/sql/: Для генерации сотрудников.xlsx
homework_09/: .gitignore  pyproject.toml  requirements.txt
homework_09/docs/: link.md  repaire_migrations.md
homework_09/nomad/: db.sqlite3
homework_09/nomad/emaillist/: forms.py  models.py  urls.py  views.py
homework_09/nomad/nomad/: settings.py  urls.py
homework_09/sql/: data_geraration_script.sql
homework_10/: README.md  app.db  config.py  requirements.txt  test_main.py
homework_10/app/: models.py  routes.py
homework_10/app/templates/: user.html
homework_10/migrations/versions/: 98d9b5ef87f1_add_todolist.py  (+3 more)
hw_07/docs/: link.md
hw_07/ms_sql_server/: docker-compose.yaml
testing/test_homework_03/: test_app.py
testing/test_homework_04/: test_main.py
(+41 files in other folders)
