[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Alexander Etkin"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
