[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = ""
authors = ["Alexander <134145027+totkin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
SQLAlchemy = "^2.0.20"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
