[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = ""
authors = ["Alexander <134145027+totkin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
SQLAlchemy = "1.4.49"
asyncio = "^3.4.3"
psycopg2 = "^2.9.7"
pg8000 = "^1.30.1"
docker = "^6.1.3"
loguru = "^0.7.0"
ujson = "^5.8.0"
asyncpg = "^0.28.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
